fix: ambiente ENUM minúsculo incompatível com AmbienteEnum
Migration V2 converte ambiente para VARCHAR e normaliza valores para
PRODUCAO/HOMOLOGACAO. Ajustes de build Java 17 e config local de dev.

Co-authored-by: Cursor <cursoragent@cursor.com>